@@ -31,7 +31,7 @@ $english = array(
 	'au_sets:unpin' => 'UnPin',
 	'au_sets:unpin:confirm' => "Are you sure you want to unpin this item?",
 	'au_sets:error:existing:pin' => "This content is already pinned to that board",
-	'au_sets:search:mine' => 'Restrict results to Pinboards I created',
+	'au_sets:search:mine' => 'Restrict results to Pinboards you created',
 	'au_sets:ingroup' => "in the group %s",
 	'au_sets:error:unpinned' => "Content is already unpinned - possibly an incorrect id",
 	'au_sets:create:new:set:with:pin' => "Create a new Pinboard and pin this",
@@ -105,7 +105,7 @@ View and comment on the new Pinboard:
 	'au_sets:widget:set_list:title' => "Recent Pins",
 	'au_sets:widget:set_list:description' => "Display a list of recently pinned content",
 	'au_sets:set_list:invalid:entity' => "Widget is not configured or the entity is no longer accessible",
-	'au_sets:set_list:full_view:help' => "Note: some content may not change support this option",
+	'au_sets:set_list:full_view:help' => "Note: some content may not support this option",
 	'au_sets:widget:set_item:title' => "Single Pin",
 	'au_sets:widget:set_item:description' => "Display a single pinned item in either a full or condensed view",
 	'au_sets:set_list:full_view' => "Choose how to display the content",
