@@ -48,7 +48,7 @@ $options['joins'][] = "JOIN {$dbprefix}objects_entity o ON e.guid = o.guid";
 $options['wheres'] = array();
 
 // only search others if 'mine' is not set
-if (!$mine) {
+if (!$mine && !elgg_is_admin_logged_in()) {
   //only show if we have write access to it
   $write_in = implode(', ', $write_accesses);
   $friends_in = "SELECT guid_one FROM {$dbprefix}entity_relationships WHERE guid_two = {$user->guid} AND relationship = 'friend'";
@@ -62,18 +62,10 @@ if (!$mine) {
   $options['joins'][] = "JOIN {$dbprefix}metadata md ON e.guid = md.entity_guid AND md.name_id = {$metadata_name_id}";
   $options['joins'][] = "JOIN {$dbprefix}metastrings ms ON ms.id = md.value_id";
 }
-else {
+elseif ($mine) {
   $options['owner_guids'] = array($user->guid);
 }
 	
-/*
- * @TODO - Jon wants everything shown, thinks it's better UX
- * leaving here in case he changes his mind
- * 
-// don't show anything already pinned
-$options['wheres'][] = "NOT EXISTS ( SELECT 1 FROM {$dbprefix}entity_relationships WHERE guid_two = e.guid AND guid_one = {$entity->guid} AND relationship = '" . AU_SETS_PINNED_RELATIONSHIP . "' )";
- * 
- */
 
 // prevent a set from pinning itself
 $options['wheres'][] = "e.guid != {$entity->guid}";
@@ -81,9 +73,11 @@ $options['wheres'][] = "e.guid != {$entity->guid}";
 
 // if we're doing a search
 if ($query) {
-  $options['selects'] = array("MATCH(o.title, o.description) AGAINST('$query') as relevance");
-  $options['wheres'][] = "MATCH(o.title, o.description) AGAINST('$query')";
-  $options['order_by'] = 'relevance DESC';
+  //$options['selects'] = array("MATCH(o.title, o.description) AGAINST('$query') as relevance");
+  //$options['wheres'][] = "MATCH(o.title, o.description) AGAINST('$query')";
+  //$options['order_by'] = 'relevance DESC';
+  $options['wheres'][] = "(o.title LIKE '%{$query}%' OR o.description LIKE '%{$query}%')";
 }
 
+//echo '<pre>' . print_r($options,1) . '</pre>';
 echo elgg_list_entities_from_metadata($options);
